# chocodye

./: Cargo.toml  LICENSE-APACHE  README.md  _config.yml  build.rs  chocoweb.wasm  index.html  lib.rs  main.css  main.js
.cargo/: config.toml
.github/workflows/: deploy.yaml
benches/: Cargo.toml
benches/src/: lib.rs
examples/: menu.rs  truecolor.rs
locales/: de.ftl  en.ftl  fr.ftl  jp.ftl
src/: de.ftl  dye.rs  fluent.rs  lib.rs  rgb.rs  snack.rs  truecolor.rs
src/ftl/: de.ftl  en.ftl  fr.ftl  jp.ftl
src/xml/: dyes.xml
web/: .gitattributes  .gitignore  Cargo.toml  build.rs  build.sh  publish.sh
web/src/: chocoweb.wasm  index.html  lib.rs  main.css  main.js
