[package]
name = "chocodye"
version = "0.1.0"
authors = ["ShE3py"]
repository = "https://github.com/ShE3py/chocodye"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["fluent", "truecolor"]
fluent = ["dep:fluent", "dep:fluent-syntax", "dep:unic-langid", "dep:log"]
truecolor = []

[[example]]
name = "truecolor"
required-features = ["fluent", "truecolor"]

[[example]]
name = "menu"
required-features = ["fluent", "truecolor"]

[dependencies.fluent]
version = "0.16.0"
optional = true

[dependencies.fluent-syntax]
version = "0.11.0"
optional = true

[dependencies.unic-langid]
version = "0.9.1"
features = ["macros"]
optional = true

[dependencies.log]
version = "0.4.18"
optional = true

[build-dependencies.quick-xml]
version = "0.28.2"
features = ["serialize"]

[build-dependencies.serde]
version = "1.0.163"
features = ["derive"]

[target.'cfg(unix)'.dev-dependencies.libc]
version = "0.2.144"
