[package]
name = "chocodye"
description = "A Rust library for changing the color of the chocobos' plumage in Final Fantasy XIV."
version = "1.1.2"
authors = ["ShE3py"]
repository = "https://github.com/ShE3py/chocodye/"
edition = "2021"
rust-version = "1.82.0"
license = "MIT OR Apache-2.0"
keywords = ["ffxiv", "chocobo"]
include = ["examples/*.rs", "src/**/*", "LICENSE-*", "README.md", "build/*"]
build = "build/main.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu", "wasm32-unknown-unknown"]

[features]
default = ["fluent", "truecolor"]
fluent = ["dep:fluent", "dep:fluent-syntax", "dep:unic-langid", "dep:log"]
truecolor = []

[[example]]
name = "truecolor"
required-features = ["fluent", "truecolor"]

[[example]]
name = "menu"
required-features = ["fluent", "truecolor"]

[dependencies.fluent]
version = "0.17.0"
optional = true

[dependencies.fluent-syntax]
version = "0.12.0"
optional = true

[dependencies.unic-langid]
version = "0.9.6"
features = ["macros"]
optional = true

[dependencies.log]
version = "0.4.27"
optional = true

[build-dependencies.quick-xml]
version = "0.38.3"
features = ["serialize"]

[build-dependencies.serde]
version = "1.0.219"
features = ["derive"]

[target.'cfg(unix)'.dev-dependencies.libc]
version = "0.2.175"

[target.'cfg(windows)'.dev-dependencies.windows-sys]
version = "0.59.0"
features = ["Win32_System_Console", "Win32_Foundation"]
