[package]
name = "chocoweb"
version = "0.1.0"
authors = ["ShE3py"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"
strip = true
panic = "abort"

[dependencies.chocodye]
path = ".."
default-features = false
features = ["fluent"]

[dependencies.fluent]
version = "0.16.0"

[build-dependencies.chocodye]
path = ".."
default-features = false
features = ["fluent"]
